# emlvm

./: .gitignore  README.md  __main__.py  known.py  pyproject.toml  sym_eval.py  tree.py  wezterm_support.py
emlvm/: __init__.py  cli.py  compiler.py  known.py  puzzle.py  rpn.py  sym_eval.py  tracer.py  tree.py  vm.py
tests/: test_compiler.py  test_edge_cases.py  test_known.py  test_rpn.py  test_vm.py
