[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emlvm"
version = "0.1.0"
description = "Single-instruction EML stack machine — eml(x,y) = exp(x) − ln(y)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "mpmath>=1.3",
    "numpy>=1.24",
    "plotext>=5.2",
]

[project.scripts]
emlvm = "emlvm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["emlvm"]
